chore: add logo, alt css7

--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <meta name="viewport" content="width=device-width , inicial-scale=1.0">
   <meta http-equiv="X-UA-Comtible" content="ie=edge">
   <link rel="stylesheet" href="/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
   <title>Doe vida! Doe Sangue</title>
 </head>
 
 <body>
   <header>
-    <h1>Doe</h1>
+    <img src="./Imagens/logo.png" alt="Image de Doe" class="logo">
     <h2>A sua doação é importante</h2>
     <p>Até 3 vidas com 1 doação</p>
     <p>Mais de 38.00 doações são necessárias todos os dias</p>
@@ -42,7 +43,7 @@ placeholder="Tipo Sanguíneo"
  </section>
 
   <main>
-    <h2>Últimos doadores</h2>
+    <h2>Últimos <span>Doadores</span></h2>
     <section class="donors"> 
       <div class="donor">
         <div class="blood">B+</div>
