chore : server.js

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <button>Quero Ajudar</button>
   </header>
 
- <section class="form">
+ <section class="form hide">
    <h2>Entre na lista de Doadores</h2>
    <form action="/">
     <input 
@@ -64,6 +64,7 @@ placeholder="Tipo Sanguíneo"
     </section>
   </main>
   <footer>Com ❤ Johan Back 💕 </footer>
+  <script src="./scripts.js"></script>
 </body>
 
 </html>
